--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <app-cockpit
         (serverCreated)="onServerAdded($event)"
-        (blueprintCreated)="onBlueprintAdded($event)"
+        (bpCreated)="onBlueprintAdded($event)"
     ></app-cockpit>
     <hr>
     <div class="row">
@@ -10,4 +10,5 @@
             [srvElement]="serverElement"></app-server-element>
         </div>
     </div>
+    <!--<label>Some label in App</label>-->
 </div>
